--- a/paciente/templates/escolher_horario.html
+++ b/paciente/templates/escolher_horario.html
@@ -43,7 +43,7 @@
                     <div class='selecionar-dia'>
                         <div class="header-dias">
                             <span class="mes">
-                            {{data_aberta.data.month}}
+                            {{nome_mes}}
                             </span>
                             <span class="dia-semana">
                             {{data_aberta.data.weekday}}
