--- a/medico/templates/cadastro_medico.html
+++ b/medico/templates/cadastro_medico.html
@@ -86,7 +86,7 @@
             <div class="row">
                <div class="col-md">
                   <label for="">Cidade:</label>
-                  <input type="text" id='cidade' class="form-control shadow-main-color" name="Cidade" placeholder="Cidade ...">
+                  <input type="text" id='cidade' class="form-control shadow-main-color" name="cidade" placeholder="Cidade ...">
                </div>
                <div class="col-md">
                   <label for="">Estado:</label>
