--- a/medico/templates/consulta_area_medico.html
+++ b/medico/templates/consulta_area_medico.html
@@ -41,7 +41,7 @@
             {% endif %}
             <div class="row">
                 <div class="col-md">
-                    <p style="font-size: 20px" class="p-bold">Paciente {{consulta.paciente.username}} <i class="bi bi-patch-check-fill icon-main"></i></p>
+                    <p style="font-size: 20px" class="p-bold">Paciente: {{consulta.paciente.username}} <i class="bi bi-patch-check-fill icon-main"></i></p>
                     <p>{{dado_medico.descricao}}</p>
                     <p class="p-bold">{{consulta.data_aberta.data}}</p>
                 </div>
