--- a/medico/templates/consultas_medico.html
+++ b/medico/templates/consultas_medico.html
@@ -23,7 +23,7 @@
                 </section>
             {% endfor %}
         {% endif %}
-        <h2><span class="color-dark">Suas consultas</span></h2>
+        <h2><span class="color-dark">Consultas Agendadas</span></h2>
         <div class="row">
             <div class="col-md">
                 <input type="text" name="especialidades" id="" class="form-control shadow-main-color" placeholder="Especialidades médias">
