--- a/paciente/templates/escolher_horario.html
+++ b/paciente/templates/escolher_horario.html
@@ -43,11 +43,11 @@
                     <div class='selecionar-dia'>
                         <div class="header-dias">
                             <span class="mes">
-                            {{nome_mes}}
+                            Agendar
                             </span>
-                            <span class="dia-semana">
+                            <!-- <span class="dia-semana">
                             {{data_aberta.data.weekday}}
-                            </span>
+                            </span> -->
                         </div>
                         <div class="conteudo-data">
                             {{data_aberta.data}}
