--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -35,6 +35,9 @@
                     <br>
                     <input type="submit" value="Logar" class="btn btn-success btn-dark-color">
                     <a href="{% url 'cadastro' %}" class="btn btn-dark-color-outline">Não possuo uma conta</a>
+                    <br>
+                    <br>
+                    <a href="" class="btn btn-dark-color-outline">Esqueci a senha</a>
                 </form>
             </div>
         </div>
