escreva a mensagem aqui

--- a/paciente/templates/consulta.html
+++ b/paciente/templates/consulta.html
@@ -57,7 +57,7 @@
                 <h3 class="p-bold">Detalhes da consulta</h3>
                 <p style="font-size:20px"><i class="bi bi-calendar3 color-dark"></i>&nbsp {{consulta.data_aberta.data}}</p>
                 <p style="font-size:20px"><i class="bi bi-tag-fill color-dark"></i></i>&nbsp R$ {{dado_medico.valor_consulta}}</p>
-                <a href="https://calendar.google.com/u/0/r/eventedit?dates=20240430T150000Z/20240430T160000&location=online&text=Consulta Médica." style="cursor: auto;" class="btn btn-dark-color-outline btn-lg">Adicione em seu calendário!</a>
+                <!-- <a href="https://calendar.google.com/u/0/r/eventedit?dates=20240430T150000Z/20240430T160000&location=online&text=Consulta Médica." style="cursor: auto;" class="btn btn-dark-color-outline btn-lg">Adicione em seu calendário!</a> -->
                 <hr>
                 <h3 class="p-bold">Como acessar ?</h3>
                 <p>No horário da consulta acesse o link disponível abaixo</p>
