--- a/paciente/templates/home.html
+++ b/paciente/templates/home.html
@@ -57,7 +57,7 @@
       <div class="col-md-4">
          <p style="font-size: 25px" class="p-bold">Lembretes</p>
          <p class="bg-main-lembrete">
-         <span class="p-bold"><i class="bi bi-exclamation-triangle-fill icon-differential"></i>&nbsp&nbsp Consulta com Dr(a) {{medico.nome}} em X dias.</span>
+         <span class="p-bold"><i class="bi bi-exclamation-triangle-fill icon-differential"></i>&nbsp&nbsp Consulta com Dr(a) XXXXXXXXXXXX em X dias.</span>
          </p>
       </div>
    </div>
