--- a/usuarios/templates/login.html
+++ b/usuarios/templates/login.html
@@ -37,7 +37,7 @@
                     <a href="{% url 'cadastro' %}" class="btn btn-dark-color-outline">Não possuo uma conta</a>
                     <br>
                     <br>
-                    <a href="" class="btn btn-dark-color-outline">Esqueci a senha</a>
+                    <a href="{% url 'password_reset' %}" class="btn btn-dark-color-outline">Esqueci a senha</a>
                 </form>
             </div>
         </div>
