--- a/paciente/templates/home.html
+++ b/paciente/templates/home.html
@@ -46,18 +46,18 @@
                   </div>
                </div>
                <p><i class="bi bi-map icon-main"></i>&nbsp&nbsp{{medico.rua}}, {{medico.numero}}.</p>
-               <!-- <p><i class="bi bi-calendar2-week icon-main"></i>&nbsp&nbspProxima data: {{medico.proxima_data}}</p> -->
-               
+                             
                <a href="{% url 'escolher_horario' medico.id %}" class="btn btn-success btn-dark-color">Escolher data</a>
             </div>
             <br>
             {% endfor %}
          </div>
       </div>
+      
       <div class="col-md-4">
          <p style="font-size: 25px" class="p-bold">Lembretes</p>
          <p class="bg-main-lembrete">
-         <span class="p-bold"><i class="bi bi-exclamation-triangle-fill icon-differential"></i>&nbsp&nbsp Consulta com Dr(a) XXXXXXXXXXXX em X dias.</span>
+         <span class="p-bold"><i class="bi bi-exclamation-triangle-fill icon-differential"></i>&nbsp&nbsp Consulta com Dr(a) Nome do Médico em X dias.</span>
          </p>
       </div>
    </div>
