--- a/usuarios/templates/password_reset_complete.html
+++ b/usuarios/templates/password_reset_complete.html
@@ -16,7 +16,7 @@
                     <label class="text-logo">Minha Saúde</label>
                 </section>
                 <hr>
-                <h2>Recuperar Senha</h2>
+                <h2 class="fonte-destaque1">Recuperar Senha</h2>
                 <p>Sua senha foi alterada. Acesse a pagina de login.</p>
            </div>
         </div>
