--- a/usuarios/templates/password_reset_form.html
+++ b/usuarios/templates/password_reset_form.html
@@ -16,7 +16,7 @@
                     <label class="text-logo">Minha Saúde</label>
                 </section>
                 <hr>
-                <h2>Recuperar Senha</h2>
+                <h2 class="fonte-destaque1">Recuperar Senha</h2>
                 <form action="{% url 'password_reset' %}" method="post"> {% csrf_token %}
                     <div class="form-group">
                         <label for="email">Informe seu endereço de e-mail:</label>
