--- a/usuarios/templates/password_reset_confirm.html
+++ b/usuarios/templates/password_reset_confirm.html
@@ -16,7 +16,7 @@
                     <label class="text-logo">Minha Saúde</label>
                 </section>
                 <hr>
-                <h2>Recuperar Senha</h2>
+                <h2 class="fonte-destaque1">Recuperar Senha</h2>
                 <form method="post">
                     {% csrf_token %}
                     {{ form.as_p }}
