--- a/usuarios/templates/password_reset_done.html
+++ b/usuarios/templates/password_reset_done.html
@@ -16,7 +16,7 @@
                     <label class="text-logo">Minha Saúde</label>
                 </section>
                 <hr>
-                <h2>Recuperar Senha</h2>
+                <h2 class="fonte-destaque1">Recuperar Senha</h2>
                 <p>Um email foi enviado com instruções de como resetar a senha. Por favor acesse seu email.</p>
            </div>
         </div>
