--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -30,7 +30,12 @@
                     <a class="nav-link" href="{% url 'cadastro_medico' %}">Sou Médico</a>
                 </li>
                 {% endif %}
-            </ul> 
+            </ul>
+
+            <!-- <div class="d-flex align-items-center">
+                <strong role="status">Enviando...</strong>
+                <div class="spinner-border ms-auto" aria-hidden="true"></div>
+            </div> -->
             
             <ul class="navbar-nav">
                 <li class="nav-item active">
