--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block 'head' %}
-    <link rel="stylesheet" href="{% static '/usuarios/css/usuarios.css' %}"
+    <link rel="stylesheet" href="{% static '/usuarios/css/usuarios.css' %}">
 {% endblock %}
 
 {% block 'body' %}
