--- a/usuarios/templates/password_reset_complete.html
+++ b/usuarios/templates/password_reset_complete.html
@@ -18,7 +18,9 @@
                 <hr>
                 <h2 class="fonte-destaque1">Recuperar Senha</h2>
                 <p>Sua senha foi alterada. Acesse a pagina de login.</p>
+                <a href="{% url 'home' %}" class="btn btn-success btn-dark-color btn-lg" >Fazer Login</a>
            </div>
+      
         </div>
         <div class="col-md bg-main d-flex justify-content-center align-items-center">
             <img src="{% static 'usuarios/img/ilustracao.png' %}" alt="">
